--- a/doc/src/installation.page
+++ b/doc/src/installation.page
@@ -38,10 +38,25 @@ Check it out with
 
  svn checkout svn://rubyforge.org/var/svn/gecoder/trunk gecoder
 
-then build and install the gem with
+h3. From source
+
+h4. Using gem
+
+Build and install the gem from source with
 
   rake gem
   gem install pkg/gecoder-0.x.x.gem
+
+h4. Without using gem
+
+"gecode.so" might have another extension depending on which platform it's 
+generated on (replace the extension in the following commands with whatever 
+extension it's given).
+
+	cd ext
+  ruby extconf.rb
+  make
+  mv gecode.so ../lib/
 
 h2. Running the tests
 
