--- a/doc/src/index.page
+++ b/doc/src/index.page
@@ -27,11 +27,8 @@ constraints.
 
 h2. Development status
 
-The project is currently in development. The interface is working but has a 
-limited set of functionality. It currently supports finite domain integers and 
-boolean variables along with most of their constraints. The next step is to add 
-the last constraints for boolean enumerations and then add support for set 
-variables.
+The project is currently in development and will in a few weeks support the 
+"initial round of planned features":http://gecoder.rubyforge.org/features.html.
 
 h2. Communication
 
