Rephrased the development status.

--- a/doc/src/index.page
+++ b/doc/src/index.page
@@ -27,8 +27,9 @@ constraints.
 
 h2. Development status
 
-The project is currently in development and will in a few weeks support the 
-"initial round of planned features":http://gecoder.rubyforge.org/features.html.
+The project is currently in development and should support the "initial round 
+of planned features":http://gecoder.rubyforge.org/features.html within a few 
+weeks.
 
 h2. Communication
 
