Updated the features.

--- a/doc/src/features.page
+++ b/doc/src/features.page
@@ -27,14 +27,14 @@ h3. Supported Gecode features
 ** "Simple relation":http://www.gecode.org/gecode-doc-latest/group__TaskIntIntRel.html
 ** "Sorting":http://www.gecode.org/gecode-doc-latest/group__TaskIntIntSort.html
 * Finite integer sets with the following constraints
-** %{color:gray}Cardinality%
 ** %{color:gray}Distinct%
 ** "Domain":http://www.gecode.org/gecode-doc-latest/group__TaskIntSetDom.html
-** %{color:gray}Connection constraints to finite domain variables%
+** "Connection constraints to finite domain variables":http://www.gecode.org/gecode-doc-latest/group__TaskIntSetConnect.html
 ** "Relation":http://www.gecode.org/gecode-doc-latest/group__TaskIntSetRel.html
 ** %{color:gray}Set selection%
 * Branching selection
 * Depth first search search
+* Reification and propagation strength
 * %{color:gray}Branch and bound search%
 * %{color:gray}Custom propagators and branching strategies%
 
