Added the select union constraint.

--- a/doc/src/documentation/set-constraints.page
+++ b/doc/src/documentation/set-constraints.page
@@ -172,9 +172,10 @@ h3. Selection
 The set selection constraint provides array access with variables as indices. 
 Lets say that we have many stores that provide different services, encoded as
 integers, and we want to select a store which provides services encoded as 4,7 
-and 17. We could do that by letting @store_services@ be an array of sets where
-the i:th set contains the integers corresponding to services provided by the
-i:th store. We can then write the constraint as follows.
+and 17. We could do that by letting @store_services@ be an array of set 
+variables where the i:th variable contains the integers corresponding to 
+services provided by the i:th store. We can then write the constraint as 
+follows.
 
 <ruby>
 store_services[selected_store].must_be.superset_of [4,7,17]
@@ -182,3 +183,18 @@ store_services[selected_store].must_be.superset_of [4,7,17]
 
 Where @selected_store@ is an integer variable assigned the index of the selected
 store.
+
+h3. Select union
+
+The select uinion constraint provides array access using a set of indices, 
+giving the union of the selected sets. Lets take the selection example but say
+that we are prepared to visit several stores instead of just one. We would then
+want to make sure that the union of the services provided by each store must 
+contain the desired services 4,7 and 17.
+
+<ruby>
+store_services[visited_stores].must_be.superset_of [4,7,17]
+</ruby>
+
+Where @store_services@ is an array of set variables and @visited_stores@ is a 
+set variable containing the stores we will visit.
