--- a/doc/src/features.page
+++ b/doc/src/features.page
@@ -31,7 +31,7 @@ h3. Supported Gecode features
 ** "Domain":http://www.gecode.org/gecode-doc-latest/group__TaskIntSetDom.html
 ** "Connection constraints to finite domain variables":http://www.gecode.org/gecode-doc-latest/group__TaskIntSetConnect.html
 ** "Relation":http://www.gecode.org/gecode-doc-latest/group__TaskIntSetRel.html
-** %{color:gray}Set selection%
+** "Set selection":http://www.gecode.org/gecode-doc-latest/group__TaskIntSetSelection.html
 * Branching selection
 * Depth first search search
 * Reification and propagation strength
