--- a/doc/src/installation.page
+++ b/doc/src/installation.page
@@ -7,10 +7,10 @@ description: How to install Gecode/R to gain access to constraint programming in
 
 h2. Warning
 
-Gecode/R is still in an early development stage, the syntax is by no means final
-and *backwards compatibility will be broken* time and time again until later in 
-the development process. Don't use Gecode/R in production-code yet, it's merely 
-available this early to allow people to play with it and give feedback.
+Gecode/R is still in a development stage, the syntax is by no means final
+and *backwards compatibility will be broken* time and time again. Don't use 
+Gecode/R in production-code yet, it's merely available at this point to allow 
+people to play with it and give feedback.
 
 h2. Dependencies
 
